# django-react-zitadel

./: README.md  docker-compose.yml
backend/: db.sqlite3  pyproject.toml
backend/drk/: authentication.py  settings.py  urls.py  views.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  main.jsx
frontend/src/components/: Home.jsx  Navbar.jsx  Resources.jsx
